# GenaiLab

./: README.md
Langchain-Samples/FastApi_Apps/: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_client.py
Langchain-Samples/app/: chat_groq.py  main.py  pyproject.toml  requirements.txt
Langchain-Samples/chat_with_documents/: main.py  pyproject.toml  requirements.txt
Langgraph/: requirements.txt
Langgraph/1_Introduction/: react_agent_basic.py
Langgraph/2_basic_reflection/: chain.py  main.py
