[project]
name = "chat-with-documents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docarray>=0.41.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.1.2",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.1",
]

[tool.poetry.dependencies]
langchain-huggingface = "^0.1.0"  # Added dependency for updated HuggingFaceEmbeddings

[tool.poetry.dev-dependencies]
pydantic = "^2.0.0"  # Ensure compatibility with the latest Pydantic
